--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,27 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: "Open Sans", Arial, sans-serif;
+    font-weight: 500;
+}
+
+.container_gen {
+    width: 100%;
+    max-width: 1290px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .nav_head {
-        display: flex;
-        margin: 20px 0;
+    display: flex;
+    margin: 7px 0;
+    justify-content: space-between;
 }
 .nav_left {
     width: 50%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+
 }
 
 .nav_right {
@@ -20,9 +30,24 @@
     flex-direction: row-reverse;
 }
 
+.lock_img {
+    width: 16px;
+    height: 15px;
+}
+
+.lock {
+    margin-right: 7px;
+}
+
+.log {
+    font-size: 13.005px;
+}
+
 .menu {
     display: flex;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 .menu a {
@@ -32,7 +57,70 @@
 }
 
 .menu li {
-    margin-left: 10px;
+    margin-right: 18px;
 }
 
+.menu ul {
+    margin: 0;
+    padding: 0;
+}
 
+hr {
+    border: none;
+    border-top: 1px solid #bdbdbd;
+}
+
+.logo_head {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.search_block form {
+    width: 720px;
+    height: 37px;
+    display: flex;
+    margin: 0 auto;
+  }
+
+input.search {
+    width: calc(100% - 54px);
+    height: auto;
+    background-color: #f5f5f5;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border: 0;
+    padding-left: 15px;
+  }
+
+input.submit {
+    background: url("https://img.icons8.com/000000/search") center center/50% auto
+      no-repeat #f5f5f5;
+    border: 0;
+    width: 40px;
+    height: auto;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
+
+.phone_num {
+    font-weight: 700;
+}
+
+.phone_num2 {
+    font-size: 12px;
+    color: #999999;
+}
+
+.call {
+    font-size: 13px;
+}
+
+.button_call {
+    border-width: 1px;
+    color: #54479b;
+    background-color: white;
+    border-color: #54479b;
+    padding: 8px 19px 9px;
+}
