--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ input.submit {
 .tab_nav {
     background-color: #54479B;
     padding: 20px 0 20px 0;
-    margin-top: 20px;
+    margin: 20px 0 20px 0;
 }
 
 .navv {
@@ -142,3 +142,28 @@ input.submit {
     font-weight: bold;
 }
 
+.product_section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.products {
+    margin-top: 30px;
+}
+
+.product_img {
+    height: 240px;
+    width: 585px;
+}
+
+p {
+    text-indent: 20px;
+    margin-top: 0;
+    color: #555555;
+}
+
+h2 {
+    color: #383838;
+}
